# DAYAI

./: .editorconfig  .gitignore  .npmrc  .prettierignore  .prettierrc  LICENSE  README.md  docker-compose.yml  eslint.config.js  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.husky/: commit-msg  pre-commit
apps/: README.md
apps/backend/: .dockerignore  .env.example  Dockerfile  package.json  tsconfig.json
apps/backend/prisma/: schema.prisma  seed.ts
apps/frontend/: .env.example  Dockerfile  jest.config.ts  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  vercel.json
contracts/: .env.example  .solhint.json  .solhintignore  README.md  hardhat.config.ts  package.json  tsconfig.json
contracts/scripts/: clean.ts  deploy.ts  export-abi.ts  verify.ts
contracts/test/: AIModelNFT.test.ts  placeholder.test.ts  setup.ts
docker/: README.md
docs/: README.md
infra/: README.md
scripts/: README.md
services/: README.md
services/ai-service/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
services/ai-service/app/core/: config.py  logging.py
services/ai-service/app/routers/: health.py  inference.py
services/ai-service/app/schemas/: health.py  inference.py
services/ai-service/app/services/: health_service.py  inference_service.py  model_registry.py
services/ai-service/tests/: test_health.py  test_inference.py
(+182 files in other folders)
